tests/miniJava/neg/005191_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( void java ) { return 0 ; } }
